# ancestry

./: .coverage  .editorconfig  .env-back  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  .ruff.toml  .tmp_db_check.py  3_WORKER_TEST_ANALYSIS.md  ACTION10_REFACTORING_COMPLETE.md  ACTION10_REFACTORING_GUIDE.md  ACTION5_CHROME_VERSION_FIX.md  ACTION6_CASCADE_FIXES_SUMMARY.md  ACTION6_COMPLETE_SUMMARY.md  ACTION6_DIAGNOSIS.md  ACTION6_FIXES_SUMMARY.md  ACTION6_FIX_APPLIED.md  ACTION6_FIX_SUMMARY.md  ACTION6_IMPROVEMENTS_PLAN.md  ACTION6_OPTIMIZATION_SUMMARY.md  ACTION6_PHASE1_SUMMARY.md  ACTION6_QUICK_REFERENCE.md  ACTION6_REFACTOR_COMPLETE.md  ACTION6_RELIABILITY_REDESIGN_PLAN.md  ACTION6_STRESS_TEST.md  ACTION8_REFACTORING_PLAN.md  ACTION8_REFACTORING_SUMMARY.md  AI_PROMPT_CHANGELOG.md  ANALYSIS_SUMMARY.md  AUTOMATED_TEST_RESULTS.md  AUTONOMOUS_REFACTORING_SESSION_2.md  AUTONOMOUS_SESSION_FINAL_REPORT.md  AUTONOMOUS_SESSION_PROGRESS.md  BLACKBOX_SETUP_GUIDE.md  CHROME_DIAGNOSTICS_INTEGRATION.md  CIRCUIT_BREAKER_IMPLEMENTATION.md  CODEBASE_ANALYSIS_MAJOR_CHALLENGES.md  CODEBASE_ANALYSIS_REPORT.md  CODEBASE_CLEANUP_SUMMARY.md  (+616 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
Data/: ancestry_backup.db  ancestry_test.db  dummy.ged  opt_out_phrases.json
actions/: __init__.py  action10.py  action11_send_approved_drafts.py  action12_shared_matches.py  action12_triangulation.py  action13_shared_matches.py  action13_triangulation.py  action14_research_tools.py  action15_tree_updates.py  action16_unified_send.py  action6_gather.py  action7_inbox.py  (+4 more)
(+351 files in other folders)
