[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ancestry"
version = "0.1.0"
description = "Ancestry Genealogical Research Automation"
authors = [{name = "Wayne Gault"}]
requires-python = ">=3.12"
dependencies = [
    "selenium>=4.31.0",
    "SQLAlchemy>=2.0.40",
    "google-generativeai>=0.8.4",
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.3",
    "tqdm>=4.67.1",
    "psutil",
    "webdriver-manager"
]

[tool.setuptools]
packages = ["actions", "ai", "api", "browser", "caching", "cli", "config", "core", "genealogy", "integrations", "messaging", "observability", "performance", "research", "scripts", "testing", "ui"]
py-modules = ["utils", "main", "run_all_tests", "standard_imports", "core_imports", "database"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["PLR0912", "PLR0913"]

[tool.ruff.lint.pylint]
max-branches = 25
max-args = 10
